--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --poll src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
