--- a/auth/package.json
+++ b/auth/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@js-ticketing-ms/common": "^1.0.6",
     "cookie-session": "^2.1.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
@@ -29,15 +30,15 @@
   "devDependencies": {
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3",
-    "@types/jest": "^30.0.0",
     "@types/supertest": "^6.0.3",
     "jest": "^30.0.2",
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.1.1",
-    "ts-jest": "^29.4.0"
+    "ts-jest": "^29.4.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
