--- a/infra/k8s/ingress-srv.yml
+++ b/infra/k8s/ingress-srv.yml
@@ -17,6 +17,14 @@ spec:
                 name: auth-srv # name of the service that we want to send the request to
                 port:
                   number: 3000
+          - path: /api/tickets/?(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: tickets-srv
+                port:
+                  number: 3000
+          # must be the last one
           - path: /?(.*)
             pathType: ImplementationSpecific
             backend:
