--- a/tickets/package.json
+++ b/tickets/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "tickets",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,7 +16,7 @@
     ]
   },
   "keywords": [],
-  "author": "",
+  "ticketsor": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
