--- a/infra/k8s/tickets-depl.yml
+++ b/infra/k8s/tickets-depl.yml
@@ -23,6 +23,8 @@ spec:
                   key: JWT_KEY
             - name: MONGO_URI
               value: 'mongodb://tickets-mongo-srv:27017/tickets'
+            - name: NATS_URL
+              value: 'nats://nats-srv:4222'
 ---
 apiVersion: v1
 kind: Service
