--- a/skaffold.yml
+++ b/skaffold.yml
@@ -35,3 +35,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: simplijulian/ticketing-ms-orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
