--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -39,3 +39,11 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: simplijulian/ticketing-ms-expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
