--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [auth, orders, payments, tickets]
     steps:
       - uses: actions/checkout@v4
-      - run: cd auth && npm install && npm run test:ci
+      - run: cd ${{ matrix.service }} && npm install && npm run test:ci
